# agent-metadata

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
src/agent_metadata/: __init__.py  annotated.py  decorator.py  metadata.py  store.py
src/agent_metadata.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_annotated.py  test_decorator.py  test_metadata.py  test_store.py
